Moved to gcfind

--- a/gcfind/frontend/app/views/main.html
+++ b/gcfind/frontend/app/views/main.html
@@ -13,7 +13,7 @@
 			<br/>
 			<br/>
 			<p>Du kan ange koordinater i WGS 84 eller longitud/latitud för att hitta cacher i närheten av de angivna koordinaterna. Annars kan du bara ange de inledande bokstäverna på cachenamnet för att söka bland <strong>alla</strong> cacher.</p>
-			<img src="loader.gif" alt="Loading" ng-show="locating"/>
+			<img src="images/loader.gif" alt="Loading" ng-show="locating"/>
 			<br/>
 			<button type="button" ng-hide="locating" class="btn btn-default btn-lg" ng-click="myPosition()">
 				<span class="glyphicon glyphicon-globe"></span> <small>Min position</small>
@@ -31,7 +31,7 @@
 <div ng-show="step2">
 	<div class="jumbotron">
 		<h3>Letar efter {{query}}...</h3>
-		<img src="loader.gif" alt="Loading"/>
+		<img src="images/loader.gif" alt="Loading"/>
 	</div>
 </div>
 
